Day 2 commit. Added credits for the site. Another selector was added to select session type. Defined specific arrays for each module and session types. Completed schedule for DMS and OOP (all session types). Onclick function checks both module and session type before execute. Check button changes its style after clicking. Selectors get disabled after clicking the check to prevent site overlap. CSS was changed according to the needs.

--- a/styles/basic-styles.css
+++ b/styles/basic-styles.css
@@ -20,6 +20,19 @@ body {
     width: 70%;
 }
 
+.credits {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    color: lightgrey;
+    font-weight: 400;
+    padding: 25px;
+}
+
+a {
+    text-decoration: none;
+    color: limegreen;
+}
+
 .type-1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
@@ -48,8 +61,16 @@ body {
     text-align: center;
 }
 
+.select-2 {
+    padding: 10px;
+    border-radius: 30px;
+    text-align: center;
+    width: 180px;
+}
+
 .button-1 {
     background-color:limegreen;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 20px;
     padding: 10px;
@@ -58,6 +79,22 @@ body {
     width: 200px;
     border-color: transparent;
     cursor: pointer;
+}
+
+.button-2 {
+    background-color: transparent;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 30px;
+    text-align: center;
+    width: 200px;
+    border-color: limegreen;
+    cursor: pointer;
+    color: limegreen;
+    border-width: 3px;
+    border-style: solid;
 }
 
 .rslt-1 {
